--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,12 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
-            </tr>
+            <td>
+            <form method="POST" action="/urls/9sm5xK/delete">
+              <button type="submit" class="btn btn-danger">Delete</button>
+            </form>
+            </td>
+          </tr>
           <% } %>
         </tbody>
       </table>
