--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -33,7 +33,7 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
             <td>
-            <form method="POST" action="/urls/9sm5xK/delete">
+              <form method="POST" action="/urls/<%= id %>/delete">
               <button type="submit" class="btn btn-danger">Delete</button>
             </form>
             </td>
