--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,8 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -32,6 +34,9 @@
             <tr>
               <td><%= id %></td>
               <td><%= urls[id] %></td>
+            <td>
+            <a href="/urls/<%= id %>" class="btn btn-warning">Edit</a>  
+            </td>
             <td>
               <form method="POST" action="/urls/<%= id %>/delete">
               <button type="submit" class="btn btn-danger">Delete</button>
