added cookies and a username login option utilising the cookies.

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,6 +17,10 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
+      <form method="POST" action="/login" class="'form-inline ml-auto">
+        <input name="username" type="text" class="form-constol mr-sm-2" placeholder="Username">
+        <button class="btn btn-outline-light" type="submit">Login</button>
+      </form>
     </div>
   </nav>
 </header>
