--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,9 @@
   <body>
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
+      <% if (username) { %>
+        <p>Logged in as : <%= username %></p>
+      <% } %>
       <h3>My URLs</h3>
       <table class="table">
         <thead>
