--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,6 +16,9 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
+        <% if (username) { %>
+          <p>Logged in as : <%= username %></p>
+        <% } %>
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
           Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
