--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -20,11 +20,15 @@
       <div class="ml-auto d-flex align-items-center">
         <% if (username) { %>
           <span class="navbar-text text-light mr-3">Logged in as: <%= username %></span> 
-          <% } %>
+          <form method="POST" action="/logout" class="form-inline ml-auto">
+            <button class="btn btn-outline-light" type="submit">Logout</button>
+          </form>
+          <% } else { %>
       <form method="POST" action="/login" class="'form-inline ml-auto">
         <input name="username" type="text" class="form-constol mr-sm-2" placeholder="Username">
         <button class="btn btn-outline-light" type="submit">Login</button>
       </form>
+      <% } %>
     </div>
     </div>
   </nav>
