--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,8 +18,8 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
       <div class="ml-auto d-flex align-items-center">
-        <% if (username) { %>
-          <span class="navbar-text text-light mr-3">Logged in as: <%= username %></span> 
+        <% if (user) { %>
+          <span class="navbar-text text-light mr-3">Logged in as: <%= user.email %></span> 
           <form method="POST" action="/logout" class="form-inline ml-auto">
             <button class="btn btn-outline-light" type="submit">Logout</button>
           </form>
