--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,8 +19,8 @@
   <body>
     <%- include('partials/_header') %>
     <main style="margin: 1em;">
-      <% if (username) { %>
-        <p>Logged in as : <%= username %></p>
+      <% if (user) { %>
+        <p>Logged in as : <%= user.email %></p>
       <% } %>
       <h3>My URLs</h3>
       <table class="table">
