--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>TinyApp - Login</title>
     <!-- Bootstrap CSS -->
     <link
     rel="stylesheet"
@@ -13,20 +13,37 @@
   />
 </head>
 <body>
-  <div class="container mt-5">
-    <h1>Login</h1>
-    <form method="POST" action="/login">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" name="email" id="email" required>
+  <%- include('partials/_header') %>
+  <main style="margin: 1em;">
+    <h3>Login</h3>
+    <form class="form-group" action="/login" method="POST">
+      <div class="form-group mb-2">
+        <label for="email">Email Address:</label>
+        <input
+          class="form-control"
+          type="email"
+          name="email"
+          placeholder="email@address.com"
+          style="width: 300px; margin: 1em"
+          id="email"
+          required
+        />
       </div>
-      <div class="form-group">
-        <label for="email">Password</label>
-        <input type="password" class="form-control" name="password" id="password" required>
+      <div class="form-group mb-2">
+        <label for="password">Password:</label>
+        <input
+          class="form-control"
+          type="password"
+          name="password"
+          placeholder="Password"
+          style="width: 300px; margin: 1em"
+          id="password"
+          required
+        />
       </div>
-      <button type="sumbit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary">Login</button>
     </form>
-  </div>
+  </main>
     <!-- Bootstrap JS -->
     <script
     src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
