--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register</title>
+  <title>TinyApp - Register</title>
       <!-- Bootstrap CSS -->
       <link
       rel="stylesheet"
@@ -13,20 +13,37 @@
     />
 </head>
 <body>
-  <div class="constainer mt-5">
-    <h1>Register</h1>
-    <form method="POST" action="/register">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" class="form-control" name="email" id="email" required>
+  <%- include('partials/_header') %>
+  <main style="margin: 1em;">
+    <h3>Create Account</h3>
+    <form class="form-group" action="/register" method="POST">
+      <div class="form-group mb-2">
+        <label for="email">Email Address:</label>
+        <input
+          class="form-control"
+          type="email"
+          name="email"
+          placeholder="email@address.com"
+          style="width: 300px; margin: 1em"
+          id="email"
+          required
+        />
       </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" id="password" required>
+      <div class="form-group mb-2">
+        <label for="password">Password:</label>
+        <input
+          class="form-control"
+          type="password"
+          name="password"
+          placeholder="Add Password Here"
+          style="width: 300px; margin: 1em"
+          id="password"
+          required
+        />
       </div>
       <button type="submit" class="btn btn-primary">Register</button>
     </form>
-  </div>
+  </main>
   <script
   src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
   integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
