--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,8 +16,8 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <% if (username) { %>
-          <p>Logged in as : <%= username %></p>
+        <% if (user) { %>
+          <p>Logged in as : <%= user.email %></p>
         <% } %>
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
