--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,7 +36,7 @@
           <% for (let id in urls) { %>
             <tr>
               <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= urls[id].longURL %></td>
             <td>
             <a href="/urls/<%= id %>" class="btn btn-warning">Edit</a>  
             </td>
