Fix Update and Delete buttons. Also properly redirects now.

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -25,7 +25,7 @@
         </p>
         <p>Total Visits: <%= visitCount %></p>
         <p>Unique Visitors: <%= uniqueVisits %></p>
-        <form method="POST" action="/urls/<%= id %>_method=PUT">
+        <form method="POST" action="/urls/<%= id %>?_method=PUT">
           <div class="form-group">
             <label for="longURL">Update URL</label>
             <input type="text" class="form-control" id="longURL" name="longURL" value="<%= longURL %>">
