--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -41,7 +41,7 @@
             <a href="/urls/<%= id %>" class="btn btn-warning">Edit</a>  
             </td>
             <td>
-              <form method="POST" action="/urls/<%= id %>_method=DELETE">
+              <form method="POST" action="/urls/<%= id %>?_method=DELETE">
               <button type="submit" class="btn btn-danger">Delete</button>
             </form>
             </td>
